finished design without media query

--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
             <label>password</label>
             <input type="text" placeholder="5+ characters" name="" value="">
           </div>
-          <button type="button" name="button">continue</button>
+          <button id="continue" type="button" name="button">continue</button>
+          <p>
+            By clicking "Continue" I agree to InVision's <a href="#">Terms of
+            Service</a> and <a href="#">Privacy Policy</a>.
+          </p>
         </form>
       </div>
     </div>
