finished page with adaptive screen

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title></title>
   </head>
   <body>
+    <a id="invision-logo" href="#"></a>
     <div class="side left">
-      <a href="#">InVision</a>
       <div id="mike-davidson">
         <p>“InVision really gets all of our best work
           in one place for the entire company to see.
